add font colours, background colours and remove list padding

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <main class="container">
+
   <section class="join">
     <h1>Join our community</h1>
-    <p class="30-day">
+    <h2>
       30-day, hassle-free money back guarantee
-    </p>
+    </h2>
     <p>
       Gain access to our full library of tutorials along with expert code reviews.
       Perfect for any developers who are serious about honing their skills.
@@ -27,9 +29,9 @@
   </section>
 
 <section class="monthly">
-  <h2>Monthly Subscription</h2>
-  <p class>
-    <span class="dollars">$29</span>per month
+  <h3>Monthly Subscription</h3>
+  <p>
+    <span class="dollars">$29</span> <span class="per">per month</span>
   </p>
   <p>
   Full access for less than $1 a day
@@ -38,7 +40,7 @@
 </section>
 
 <section class="why">
-<h2>Why Us</h2>
+<h3>Why Us</h3>
 <ul>
   <li>
     Tutorials by industry experts
@@ -64,6 +66,7 @@
 </ul>
 </section>
 
+  </main>
 
   <footer>
     <p class="attribution">
